# simccs-maptool

./: .gitignore  MANIFEST.in  Makefile  README.md  runtests.py  setup.cfg  setup.py  shp2sinks_mapping.txt
frontend/: jsconfig.json  package.json  vue.config.js
frontend/src/: entry-cases.js  entry-projects.js
frontend/src/assets/: styles.scss
frontend/src/components/: CaseEditor.vue  CasesContainer.vue  CopyCaseContainer.vue  DatasetBadge.vue  DatasetEditor.vue  DatasetTypeBadge.vue  EditCaseContainer.vue  EditDatasetContainer.vue  EditProjectContainer.vue  MyWorkspaces.vue  NewCaseContainer.vue  NewDatasetContainer.vue  (+10 more)
java/maptool/: CostSurfaceData.java
scripts/: make_shapefiles.py
simccs_maptool/: apps.py  datasets.py  django_airavata_sdk.py  geoserver.py  models.py  output_views.py  serializers.py  simccs_helper.py  urls.py  views.py
simccs_maptool/migrations/: 0001_initial.py  0002_maptooldata_popup.py  0003_auto_20201211_0847.py  0004_auto_20201217_1152.py  0005_auto_20210211_0934.py  0006_auto_20210211_0935.py  0007_auto_20210211_1037.py  0008_auto_20210316_1555.py  0009_auto_20210317_1312.py  0010_auto_20210317_1715.py  0011_userpreference.py  0012_auto_20210323_0954.py  0013_auto_20210329_0919.py  0014_auto_20210329_0920.py  0015_auto_20210329_0944.py  0016_dataset_deleted.py  0017_maptooldata_symbol.py  0018_auto_20210706_0845.py  0019_scenarioexperimentnote.py
simccs_maptool/templates/: index.html  index_test.html
simccs_maptool/tests/: settings.py  test_simccs_helper.py
tests/: test_serializers.py  test_settings.py  test_simccs_helper.py
(+69 files in other folders)
