[metadata]
name = simccs-maptool
version = 0.0.1
description = SimCCS MapTool plugin to Airavata Django Portal

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    cython
    pyjnius
    pyshp
    airavata-django-portal-sdk
    djangorestframework
    # Pandas 1.2 requires Python 3.7+ and we need less than 1.2 until we drop 3.6 support
    pandas < 1.2
    geopandas

[options.entry_points]
airavata.djangoapp =
    simccs_maptool = simccs_maptool.apps:MapToolConfig
airavata.output_view_providers =
    cplex-solution-link = simccs_maptool.output_views:SolutionLinkProvider

[flake8]
max-line-length = 88
